--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     </div>
 
     <div class="Hope">
-
-
+        <h3>My name is Hope</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, inventore minus! At eos id exercitationem est? Qui dolorum earum aspernatur eveniet rerum, eos atque, fugiat, tempora mollitia iure reprehenderit voluptates</p>
 
     </div>
 
     <div class="Kariuki">
 
 
-        
+
 
     </div>
     
