--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </div>
 
     <div class="Isaac">
-
+        <h4>Isaac kiptoo</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, sed aut quae dolor quia quo dolores officiis nobis itaque veritatis tempora ipsum nulla, perferendis velit quibusdam, possimus corporis rerum beatae.</p>
 
 
     </div>
